--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,6 @@ spring.liquibase.change-log=classpath:db/changelog/changelog.yaml
 spring.liquibase.url=jdbc:postgresql://localhost:5432/cataMestre
 spring.liquibase.user=postgres
 spring.liquibase.password=postgres
+
+spring.jpa.show-sql=true
+logging.level.org.hibernate.SQL=DEBUG
