--- a/src/main/resources/db/changelog/changelog.yaml
+++ b/src/main/resources/db/changelog/changelog.yaml
@@ -11,3 +11,5 @@ databaseChangeLog:
       file: db/changelog/0000000004_create_occurrence_table.sql
   - include:
       file: db/changelog/0000000005_change_things_to_occurrence.sql
+  - include:
+      file: db/changelog/0000000006_create_modality_column.sql
